--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
     "webpack-dev-server": "^3.2.1"
   }
 }
